force-app/main/default/objects/Account/fields/Newest_Contact_c__c.field-meta.xml
<CustomField>
    <fullName>Newest_Contact_c__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Newest_Contact__c

    Please create a new lookup field on the Account object called &quot;Newest_Contact__c&quot;</description>
    <label>Newest_Contact__c</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>