force-app/main/default/objects/Account/validationRules/Can_be_VIP.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_be_VIP</fullName>
    <active>true</active>
    <description>In order to be able to become VIP, a customer must have made at least 2 high-value purchases</description>
    <errorConditionFormula>and(
high_value_purchases__c&lt;2,
ISPICKVAL(Priority__c, &apos;VIP&apos;)
)</errorConditionFormula>
    <errorMessage>Attention: in order to be able to become VIP, a customer must have made at least 2 high-value purchases.</errorMessage>
</ValidationRule>